# py-hf-model-screen

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
project-config/: default_config.yaml  example_config.yaml  round_two_roadmap_fidelity.yaml
scripts/: hf_repo_model_screen.py  hf_repo_model_screen_v2.py
tests/: test_hf_repo_model_screen.py
