[project]
name = "hf-model-screen"
version = "0.1.0"
description = "Hugging Face model screening harness for local repositories"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Barry-Thomas-Paul Moss" }]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.14.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
